# netgear-tool

./: .gitignore  README.md  cli.py  netgear_switch.py  pyproject.toml  test_read.py  test_writes.py
docs/: cli.md  sdk.md
src/netgear_tool/: __init__.py  _cli.py
