[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netgear-tool"
version = "0.2.0"
description = "Python SDK and CLI for Netgear Smart Managed Plus switches"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Jeff Francis", email = "gjfrancis@protonmail.com" },
]
keywords = ["netgear", "switch", "network", "vlan", "managed-switch", "cli", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.20",
]

[project.urls]
Homepage = "https://ordo-artificum.com/products/netgear-tool/"
Repository = "https://github.com/jfrancis42/netgear-tool"
"Bug Tracker" = "https://github.com/jfrancis42/netgear-tool/issues"

[project.scripts]
netgear = "netgear_tool._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/netgear_tool"]
